# karmalentil

./: .gitignore  BIDIRECTIONAL.md  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  CPP_BINDINGS_FIXED.md  CPP_INTEGRATION_COMPLETE.md  CPP_RAYTRACING_STATUS.md  DEVELOPMENT_STATUS_REPORT.md  FEATURE_COMPARISON.md  HOUDINI_INTEGRATION_GUIDE.md  HOUDINI_LENS_SHADER_REALITY_CHECK.md  HOUDINI_REALITY_CHECK.md  IMPLEMENTATION_STATUS.md  INSTALL.md  LICENSE  NEXT_STEPS.md  PLUGIN_INSTALLATION.md  POLYNOMIAL_OPTICS_PATCHES.md  POTK_IMPLEMENTATION_PLAN.md  POTK_NETWORK_LIMITATION.md  POTK_PYTHON_IMPLEMENTATION.md  POTK_QUICK_REFERENCE.md  POTK_README.md  POTK_WORKING_STATUS.md  PROJECT_STATUS_OVERVIEW.md  QUICKSTART.md  README.md  README_POTK_QUICKSTART.md  SESSION_CONTINUATION_SUMMARY.md  SESSION_FINAL_SUMMARY.md  SESSION_SUMMARY.md  TROUBLESHOOTING.md  USAGE.md  VIEWPORT_INTEGRATION.md  debug_camera_params.py  install_karmalentil.bat  install_karmalentil.sh  setup_potk.sh  test_cpp_raytracing.py  (+8 more)
database/optical_designs/: example_lens.json
examples/: setup_bidirectional_render.py  setup_lentil_camera.py
gallery/apertures/: README.md
lenses/: anamorphic_50mm.json  angenieux_1953_55mm.json  canon_50mm_1956.json  canon_wideangle_1982.json  cinema_prime_50mm.json  cooke_anamorphic_1954.json  cooke_speed_panchro_1920.json  double_gauss_50mm.json  fast_fifty_f14.json  fisheye_15mm.json  fisheye_1954.json  kit_lens_35mm.json  kodak_petzval_1948.json  macro_100mm.json  meyer_primoplan_1936.json  minolta_fisheye_1978.json  nikon_58mm_2014.json  nikon_wideangle_1971.json  panavision_anamorphic_2006.json  pancake_40mm.json  petzval_1900.json  portrait_135mm.json  premium_portrait_105mm.json  pro_zoom_50mm.json  soft_focus_105mm.json  standard_35mm.json  super_tele_400mm.json  takumar_35mm_1974.json  takumar_50mm_1970.json  takumar_55mm_1969.json  tele_zoom_135mm.json  telephoto_200mm.json  telephoto_85mm.json  tilt_shift_24mm.json  ultra_wide_14mm.json  ultra_wide_zoom_18mm.json  vintage_58mm.json  wide_angle_24mm.json  zeiss_biotar_1927.json  zeiss_flektagon_1954.json
lenses/double_gauss_50mm/: lens_constants.h  pt_evaluate.h  pt_sample_aperture.h
otls/: README.md
python/: bidirectional_filter.py  copy_shelf_to_user.py  create_lentil_camera_hda.py  create_lentil_hda.py  diagnose_camera_lens_params.py  diagnose_installation.py  force_load_shelf.py  import_lens.py  karma_lentil_filter.py  lens_database.py  lentil_callbacks.py  lentil_camera_setup.py  setup_complete_lentil.py  setup_lentil_lops.py
python/potk/: __init__.py  lens_database_manager.py  lens_importer.py  poly_fitter.py  polynomial_fitter_numpy.py  simple_raytracer.py  vex_generator.py
scripts/: 123.py  houdini_create_lens_material.py  houdini_shelf_tools.py
scripts/lop/: camera_OnCreated.py
src/: python_bindings.cpp
toolbar/: karmalentil.shelf
tools/: fit_lens.py  generate_stmap.py  generate_vex.py  import_patent.py  validate_database.py
vex/: karma_lentil_lens.vfl  lentil_camera_shader.vfl
vex/camera/: lentil_camera.vfl  lentil_camera_bidir.vfl  lentil_camera_integrated.vfl
vex/filter/: lentil_bidirectional_filter.vfl
vex/include/: lentil_bidirectional.h  lentil_utils.h
vex/templates/: lens_shader_template.vfl
